<resources>
    <string name="app_name">HPB Open source Wallet</string>
    <string name="exception_json_field">数据解析失败!</string>
    <string name="exception_json_handle_error">服务器处理失败，请稍后再试</string>
    <string name="exception_json_error_01">请求超时，请稍后再试</string>
    <string name="exception_json_error_02">服务器异常，请稍后再试</string>
    <string name="exception_netword_error">网络异常，请检查网络后再试</string>
    <string name="permissions_txt_qrcode">扫描二维码需要打开相机和散光灯的权限</string>
    <string name="permissions_txt_photo">访问图片需要相册权限</string>
    <string name="toast_quit_again">再按一次退出</string>
    <string name="main_activity_tabs_home">首页</string>
    <string name="main_activity_tabs_find">发现</string>
    <string name="main_activity_tabs_me">我的</string>
    <string name="main_home_top_txt_01">扫一扫</string>
    <string name="main_home_top_txt_02">收款</string>
    <string name="main_home_top_txt_03">转账</string>
    <string name="main_home_content_txt_allmoney">总资产</string>
    <string name="main_home_pop_choose_wallet_title">钱包列表</string>
    <string name="scan_activity_txt_title">扫码</string>
    <string name="scan_activity_txt_title_right">相册</string>
    <string name="scan_activity_txt_zxingview_tip">将二维码/条码放入框内，即可自动扫描</string>
    <string name="scan_activity_txt_phone_error">打开相机出错</string>
    <string name="scan_activity_txt_no_find_qr">未发现二维码</string>
    <string name="receive_activity_txt_title">收款</string>
    <string name="receive_activity_txt_top_01">币种</string>
    <string name="receive_activity_txt_top_02">金额</string>
    <string name="receive_activity_txt_top_03">收款金额</string>
    <string name="receive_activity_txt_copy_address">复制收款地址</string>
    <string name="total_assets_activity_txt_title">我的资产</string>
    <string name="total_assets_activity_txt_top">总资产约合：</string>
    <string name="transfer_activity_txt_01">发送给</string>
    <string name="transfer_activity_txt_02">地址</string>
    <string name="transfer_activity_txt_03">扫码或输入</string>
    <string name="transfer_activity_txt_04">提示：转账前请务必确认地址及币种信息无误，一旦转出不可恢复！</string>
    <string name="transfer_activity_txt_05">输入金额</string>
    <string name="transfer_activity_txt_06">全部转出</string>
    <string name="transfer_activity_txt_07">输入转出金额</string>
    <string name="transfer_activity_txt_08">可用余额</string>
    <string name="transfer_activity_txt_09">添加备注(50字以内)</string>
    <string name="transfer_activity_txt_10">交易费用</string>
    <string name="transfer_activity_toast_00">不能转账给自己</string>
    <string name="transfer_activity_toast_01">转账地址不能为空</string>
    <string name="transfer_activity_toast_02">地址格式不正确，请确认</string>
    <string name="transfer_activity_toast_03">输入金额不能为空</string>
    <string name="transfer_activity_toast_04">转账金额不能为0</string>
    <string name="transfer_activity_toast_05">转账金额超过剩余金额</string>
    <string name="transfer_activity_toast_06">交易费用获取失败</string>
    <string name="transfer_activity_dialog_txt_01">支付详情</string>
    <string name="transfer_activity_dialog_txt_02">订单信息</string>
    <string name="transfer_activity_dialog_txt_03">转账</string>
    <string name="transfer_activity_dialog_txt_04">付款钱包</string>
    <string name="transfer_activity_dialog_txt_05">付款金额</string>
    <string name="transfer_activity_dialog_txt_06">密码错误，请重试</string>
    <string name="transfer_activity_dialog_txt_07">请输入你的钱包密码</string>
    <string name="transfer_activity_dialog_txt_08">转入地址</string>
    <string name="main_find_news_title">资讯</string>
    <string name="main_find_news_item_title">HPB快报</string>
    <string name="main_me_manager_txt_wallet">管理钱包</string>
    <string name="main_me_manager_txt_transfer">交易记录</string>
    <string name="main_me_manager_txt_msg">消息中心</string>
    <string name="main_me_manager_txt_setting">系统设置</string>
    <string name="main_me_manager_txt_help">帮助中心</string>
    <string name="main_me_manager_txt_coldwallet">冷钱包</string>
    <string name="main_me_manager_txt_about_me">关于我们</string>
    <string name="create_wallet_title">新建钱包</string>
    <string name="create_wallet_warn">密码用于保护私钥和交易授权，强度非常重要\n钱包不储存密码，也无法帮您找回，请务必牢记</string>
    <string name="create_wallet_edit_name_tip">给自己的钱包起个名字，如：数字钱包</string>
    <string name="create_wallet_edit_name_hint">钱包名称</string>
    <string name="create_wallet_edit_name_hint_01">钱包名称</string>
    <string name="create_wallet_edit_name_empty">钱包名称不能为空</string>
    <string name="create_wallet_edit_psd_one">设置密码，保护私钥和交易授权</string>
    <string name="create_wallet_edit_psd_one_hint">请输入密码</string>
    <string name="create_wallet_edit_psd_warn">不少于8位字符，建议混合大小写字母、数字、特殊字符</string>
    <string name="create_wallet_edit_psd_two">重复密码</string>
    <string name="create_wallet_edit_psd_two_hint">请输入重复密码</string>
    <string name="create_wallet_edit_hint_warn">密码提示信息（可不填）</string>
    <string name="create_wallet_txt_left">我已仔细阅读并同意</string>
    <string name="create_wallet_txt_right">&#160;《服务及隐私条款》</string>
    <string name="create_wallet_txt_right_01">服务及隐私条款</string>
    <string name="create_wallet_btn_import">导入钱包</string>
    <string name="create_wallet_submit_succese">创建成功</string>
    <string name="create_wallet_submit_faile">创建钱包失败</string>
    <string name="create_wallet_submit_faile_03">钱包数量超出限制</string>
    <string name="create_wallet_succese_01">创建成功，立即备份你的钱包</string>
    <string name="create_wallet_succese_02">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上。然后尝试转入、转出小额资产开始使用。查看详细教程</string>
    <string name="create_wallet_succese_03">查看详细教程</string>
    <string name="create_wallet_succese_04">详细教程</string>
    <string name="import_wallet_item_zhujici">助记词</string>
    <string name="import_wallet_item_zhujici_input_hint">助记词，按空格分隔</string>
    <string name="import_wallet_item_zhujici_psd_hint_two">请输入密码</string>
    <string name="import_wallet_item_zhujici_psd_hint_three">请再次确认密码</string>
    <string name="import_wallet_item_zhujici_btn_txt">开始导入</string>
    <string name="import_wallet_item_zhujici_btn_what">什么是助记词？</string>
    <string name="import_wallet_item_edit_mnemonic_empty">请输入助记词</string>
    <string name="import_wallet_item_edit_mnemonic_faile">输入的助记词有误,请检查</string>
    <string name="import_wallet_item_edit_psd_empty">密码不能为空</string>
    <string name="import_wallet_item_edit_keystore_error">暂不支持该Keystore文件,请尝试导入私钥</string>
    <string name="import_wallet_item_edit_keystore_error_01">Keystore文件格式错误</string>
    <string name="import_wallet_item_edit_psd_length">请输入不少于8位字符的密码</string>
    <string name="import_wallet_item_edit_psd_and_other">密码不一致，请重新输入</string>
    <string name="import_wallet_item_submit_faile_2">钱包已存在</string>
    <string name="import_wallet_item_submit_faile_3">导入失败</string>
    <string name="import_wallet_item_submit_suceese">导入成功</string>
    <string name="import_wallet_item_keystore">Keystore</string>
    <string name="import_wallet_item_keystore_txt_des">直接复制粘贴以太坊官方钱包 Keystore 文件内容到输入框。或者通过生成 Keystore 内容的二维码，扫描录入。</string>
    <string name="import_wallet_item_keystore_input_hint">Keystore文本内容</string>
    <string name="import_wallet_item_keystore_btn_what">什么是Keystore？</string>
    <string name="import_wallet_item_keystore_empty">请输入Keystore文本</string>
    <string name="import_wallet_item_privatekey">私钥</string>
    <string name="import_wallet_item_privatekey_input_hint">明文私钥</string>
    <string name="import_wallet_item_privatekey_input_hint_faile">私钥不规范,请检查</string>
    <string name="import_wallet_item_privatekey_empty">请输入私钥</string>
    <string name="import_wallet_item_privatekey_btn_what">什么是私钥？</string>
    <string name="export_keystore_item_file">Keystore文件</string>
    <string name="export_keystore_item_qr">二维码</string>
    <string name="export_keystore_item_faile">密码错误</string>
    <string name="dailog_psd_edit_hint">请输入密码</string>
    <string name="dailog_psd_btn_ok">确认</string>
    <string name="dailog_psd_btn_cancle">取消</string>
    <string name="wallet_manager_txt_title">钱包管理</string>
    <string name="wallet_manager_txt_no_copy">未备份</string>
    <string name="wallet_manager_txt_money_unit_01">HPB</string>
    <string name="wallet_manager_txt_money_unit_02">CNY</string>
    <string name="wallet_manager_txt_money_unit_03">ETH</string>
    <string name="wallet_manager_details_txt_title">钱包详情</string>
    <string name="wallet_manager_details_txt_psd">修改密码</string>
    <string name="wallet_manager_details_txt_export_key">导出私钥</string>
    <string name="wallet_manager_details_txt_export_keystore">导出Keystore</string>
    <string name="wallet_manager_details_txt_export_zhjici">备份助记词</string>
    <string name="wallet_manager_details_txt_delete_wallet">删除钱包</string>
    <string name="wallet_manager_details_toast_tip_01">修改钱包名称失败</string>
    <string name="wallet_manager_details_toast_tip_02">删除钱包失败</string>
    <string name="wallet_manager_details_toast_tip_03">修改的钱包名称不能为空</string>
    <string name="wallet_manager_details_toast_tip_04">修改的钱包名称不能与之前名称一样</string>
    <string name="wallet_manager_details_toast_tip_05">修改钱包名称成功</string>
    <string name="wallet_manager_details_dialog_tip_01">此操作不可逆，钱包将被永久性删除!</string>
    <string name="wallet_manager_details_no_wallet">您还没有创建钱包</string>
    <string name="wallet_details_dialog_free_01">免责声明</string>
    <string name="wallet_details_dialog_free_02">请确保已备份钱包至安全的地方，HPB Wallet不承担任何钱包丢失，被盗，忘记密码等产生的资产损失</string>
    <string name="change_wallet_txt_title">修改密码</string>
    <string name="change_wallet_psd_edit_old">当前密码</string>
    <string name="export_keystore_btn_submit">复制Keystore</string>
    <string name="export_keystore_file_txt_01">离线保存</string>
    <string name="export_keystore_file_txt_02">请复制粘贴Keystore文件到安全、离线的地方保存。切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险。</string>
    <string name="export_keystore_file_txt_03">请勿使用网络传输</string>
    <string name="export_keystore_file_txt_04">请勿通过网络工具传输Keystore文件，一旦被黑客获取将造成不可挽回的资产损失。建议离线设备通过扫二维码方式传输。</string>
    <string name="export_keystore_file_txt_05">密码保险箱保存</string>
    <string name="export_keystore_file_txt_06">如需在线保存，则建议使用安全等级更高的1Password等密码保管软件保存Keystore。</string>
    <string name="export_keystore_tip_txt_01">仅供直接扫描</string>
    <string name="export_keystore_tip_txt_02">二维码禁止保存、截图、以及拍照。仅供用户在安全环境下直接扫描来方便的导入钱包。</string>
    <string name="export_keystore_tip_txt_03">在安全环境下使用</string>
    <string name="export_keystore_tip_txt_04">请在确保四周无人及摄像头的情况下使用。二维码一旦被他人获取将造成不可挽回的资产损失。</string>
    <string name="export_keystore_tip_01">确认周围无人及摄像头</string>
    <string name="export_keystore_tip_02">显示二维码</string>
    <string name="export_mnemonic_txt_tip_02">下一步</string>
    <string name="export_wallet_dialog_top_01">请勿截图</string>
    <string name="export_wallet_dialog_top_02">请确保四周无人及任何摄像头！无用截图或拍照的方式保存Keystore文件或对应二维码</string>
    <string name="export_wallet_dialog_top_03">知道了</string>
    <string name="activity_main_map_txt_title">主网映射</string>
    <string name="activity_vote_txt_title">竞选投票</string>
    <string name="activity_vote_txt_02">默认</string>
    <string name="activity_vote_txt_03">机构</string>
    <string name="activity_vote_txt_04">公司</string>
    <string name="activity_vote_txt_05">个人</string>
    <string name="activity_vote_txt_10">排名</string>
    <string name="activity_vote_txt_11">名称</string>
    <string name="activity_vote_txt_12">票数</string>
    <string name="activity_vote_txt_13">投票</string>
    <string name="txt_main_activity_tab_find">发现</string>
    <string name="receive_warn_txt_0">注：HPB暂不支持跨链转账</string>
    <string name="receive_warn_txt_01">1.HPB芯链独立于以太坊在内的区块链平台，请勿跨链转账，防止资产丢失</string>
    <string name="receive_warn_txt_02">2.HPB钱包仅支持在其自身平台上发行的通证</string>
    <string name="import_wallet_item_coldwallet">冷钱包</string>
    <string name="main_me_manager_txt_send_redpackets">红包</string>
    <string name="activity_vote_gl_txt_01">投票治理</string>
    <string name="activity_cion_fh_txt_01">节点分红</string>
    <string name="activity_cion_fh_txt_08">分红比例</string>
    <string name="fragment_main_news_digital_sign_txt">数字签名</string>
    <string name="view_digital_sign_qr_code_txt_01">数字签名二维码信息</string>
    <string name="view_digital_sign_qr_code_txt_02">请使用冷钱包扫描屏幕上方二维码</string>
</resources>