<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_18"
    android:background="@color/white"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/common_txt_style_15_333"
            android:text="@string/export_keystore_file_txt_01"/>
        <TextView
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_66688F"
            android:text="@string/export_keystore_file_txt_02"/>
        <TextView
            style="@style/common_txt_style_15_333"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/export_keystore_file_txt_03"/>
        <TextView
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_66688F"
            android:text="@string/export_keystore_file_txt_04"/>
        <TextView
            style="@style/common_txt_style_15_333"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/export_keystore_file_txt_05"/>
        <TextView
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_66688F"
            android:text="@string/export_keystore_file_txt_06"/>

        <TextView
            android:id="@+id/export_keystore_file_content"
            style="@style/txt_export_wallet_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/dp_25"/>
        <Button
            android:id="@+id/export_keystore_file_copy"
            style="@style/common_btn_style_defult"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginBottom="@dimen/dp_18"
            android:textAllCaps="false"
            android:background="@drawable/draw_btn_defult_bg_03"
            android:text="@string/export_keystore_btn_submit"/>
    </LinearLayout>
</ScrollView>
