<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_black_radius_5_top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_vote_tab_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_vote_txt_02"
            android:textColor="@color/color_2E2F47" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txt_vote_tab_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_EEFDF4"
            android:gravity="center"
            android:text="@string/activity_vote_txt_03"
            android:textColor="@color/color_2E2F47" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txt_vote_tab_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_EEFDF4"
            android:gravity="center"
            android:text="@string/activity_vote_txt_04"
            android:textColor="@color/color_2E2F47" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txt_vote_tab_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_EEFDF4"
            android:gravity="center"
            android:text="@string/activity_vote_txt_05"
            android:textColor="@color/color_2E2F47" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_10">

        <TextView
            style="@style/common_txt_style_12_999"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/activity_vote_txt_10"
            android:textColor="@color/color_66688F" />

        <TextView
            style="@style/common_txt_style_12_999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_vote_txt_11"
            android:layout_marginRight="3dp"
            android:textColor="@color/color_66688F" />

        <TextView
            style="@style/common_txt_style_12_999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_vote_txt_12"
            android:textColor="@color/color_66688F" />

        <TextView
            android:id="@+id/view_vote_info_middle_fhbl"
            style="@style/common_txt_style_12_999"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/activity_cion_fh_txt_08"
            android:visibility="gone"
            android:textColor="@color/color_66688F" />

        <TextView
            style="@style/common_txt_style_12_999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_vote_txt_13"
            android:textColor="@color/color_66688F" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/color_F5F5F8" />
</LinearLayout>