<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_18"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/common_txt_style_15_333"
            android:text="@string/export_keystore_tip_txt_01"/>
        <TextView
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_66688F"
            android:text="@string/export_keystore_tip_txt_02"/>
        <TextView
            style="@style/common_txt_style_15_333"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/export_keystore_tip_txt_03"/>
        <TextView
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_66688F"
            android:text="@string/export_keystore_tip_txt_04"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/export_keystore_qr_layout"
                android:layout_width="@dimen/dp_194"
                android:layout_height="@dimen/dp_194"
                android:orientation="vertical"
                android:background="@drawable/bg_export_mnemonic_one"
                android:gravity="center"
                android:visibility="visible">
                <ImageView
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:src="@mipmap/icon_export_qr_warn"/>
                <TextView
                    style="@style/common_txt_style_12_999"
                    android:layout_marginTop="@dimen/dp_18"
                    android:text="@string/export_keystore_tip_01"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/export_keystore_qr_img"
                android:layout_width="@dimen/dp_194"
                android:layout_height="@dimen/dp_194"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/export_keystore_qr_btn_show"
            style="@style/common_btn_style_defult"
            android:layout_marginTop="@dimen/dp_48"
            android:textAllCaps="false"
            android:background="@drawable/draw_btn_defult_bg_03"
            android:text="@string/export_keystore_tip_02"/>
    </LinearLayout>
</ScrollView>
