<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_common_whait_dialog"
    android:orientation="vertical">
    <include layout="@layout/common_toolbar"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_18"
        android:paddingRight="@dimen/dp_18"
        android:orientation="vertical">
        <ImageView
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:src="@mipmap/icon_reicever_warn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textColor="@color/color_FF4465"
            android:text="@string/receive_warn_txt_0"/>
        <TextView
            android:layout_width="match_parent"
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/receive_warn_txt_01"/>
        <TextView
            android:layout_width="match_parent"
            style="@style/common_txt_style_14_666"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/receive_warn_txt_02"/>
    </LinearLayout>

    <Button
        android:id="@+id/receivables_warn_btn_know"
        style="@style/common_btn_style_defult"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/draw_btn_defult_bg_03"
        android:text="@string/export_wallet_dialog_top_03"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_margin="18dp"/>
</LinearLayout>
