<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingEnd="@dimen/dp_18">


    <ImageView
        android:id="@+id/iv_qr_code_info"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_250"
        android:background="@color/white"
        android:contentDescription="@string/view_digital_sign_qr_code_txt_01"
        android:padding="@dimen/dp_6"
        android:src="@mipmap/icon_create_qr_defult" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/view_digital_sign_qr_code_txt_02"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />


    <Button
        android:id="@+id/btn_next_tip"
        style="@style/common_btn_style_defult"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/bg_receive_btn_bg"
        android:text="@string/export_mnemonic_txt_tip_02"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />


</LinearLayout>